配置 config gradle update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    if (isModule){
+        System.out.println("output " + isModule)
+    } else {
+        System.out.println("output " + isModule)
+    }
 }
