--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-ext{
+ext {
     // false: 组件模式
     // true ：集成模式
-    isModule = false
+    isApplication = false
     android = [
             compileSdkVersion: 29,
             minSdkVersion    : 19,
@@ -10,7 +10,12 @@ ext{
             versionCode      : 1,
             versionName      : "1.0"
     ]
-    appId = ["app"  : "com.dn_alan.myapplication",
-             "module1": "com.dn_alan.module1",
-             "module2" : "com.dn_alan.module2" ]
+    appId = ["app": "com.dn_alan.myapplication",
+             "two": "com.dn_alan.module1",
+             "cat": "com.dn_alan.module2"]
+    depend = [
+            "appcompat"       : "androidx.appcompat:appcompat:1.0.2",
+            "core-ktx"        : "androidx.core:core-ktx:1.0.1",
+            "constraintlayout": "androidx.constraintlayout:constraintlayout:1.1.3"
+    ]
 }
