--- a/twoactivity/build.gradle
+++ b/twoactivity/build.gradle
@@ -1,36 +1,53 @@
-apply plugin: 'com.android.application'
-
+if (isApplication) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 //赋值与引用
 def cfg = rootProject.ext.android
 def appId = rootProject.ext.appId
-def depend = rootProject.ext.depend
-
 android {
-    compileSdkVersion cfg.compileSdkVersion
+    compileSdkVersion 29
     buildToolsVersion "29.0.2"
+
+
     defaultConfig {
-        applicationId appId["app"]
+        if (isApplication) {
+            applicationId appId["two"]
+        }
         minSdkVersion cfg.minSdkVersion
         targetSdkVersion cfg.targetSdkVersion
         versionCode cfg.versionCode
         versionName cfg.versionName
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            if (isApplication) {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/manifest/AndroidManifest.xml'
+            }
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 //    implementation 'androidx.appcompat:appcompat:1.0.2'
 //    implementation 'androidx.core:core-ktx:1.0.1'
 //    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -40,8 +57,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    if (!isApplication){
-        implementation project(path: ':catactivity')
-        implementation project(path: ':twoactivity')
-    }
 }
+
