--- a/twoactivity/build.gradle
+++ b/twoactivity/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation depend["appcompat"]
     implementation depend["core-ktx"]
     implementation depend["constraintlayout"]
+    implementation project(path: ':arouter')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
