路由 + livedata实现组件通讯

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 
-apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 //赋值与引用
@@ -41,6 +42,8 @@ dependencies {
     implementation project(path: ':arouter')
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation project(path: ':annotation')
+    kapt project(path: ':annotation_compiler')
     if (!isApplication){
         implementation project(path: ':catactivity')
         implementation project(path: ':twoactivity')
