--- a/twoactivity/build.gradle
+++ b/twoactivity/build.gradle
@@ -4,6 +4,7 @@ if (isApplication) {
     apply plugin: 'com.android.library'
 }
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 //赋值与引用
 def cfg = rootProject.ext.android
@@ -55,6 +56,8 @@ dependencies {
     implementation depend["core-ktx"]
     implementation depend["constraintlayout"]
     implementation project(path: ':arouter')
+    implementation project(path: ':annotation')
+    kapt  project(path: ':annotation_compiler')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
